--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,18 +1,44 @@
-{% load static %}
-<!doctype html>
+{% extends "main/index.html" %}
+{% block content %}
+<nav class="navbar navbar-dark bg-dark text-light">
+    <div class="container">
+        <span class="navbar-nav">
+            <a href="{% url 'home' %}">
+                <span class="navbar-brand">LoL Winrate Game</span>
+            </a>
+        </span>
+    </div>
+</nav>
 
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>LoL winrate game</title>
-</head>
+<main class="container">
+    <div class="card">
+        <h2 class="mt-4 d-flex justify-content-center">Pick data source:</h2>
+        <div class="card-body mt-1 d-flex justify-content-center">
+            <form action="/game">
+                {% csrf_token %}
+                <div class="form-check px-3">
+                    <input class="form-check-input" type="radio" name="src" id="input1" value="1" checked>
+                    <label class="form-check-label" for="input1">
+                        metasrc.com
+                    </label>
+                </div>
+                <div class="form-check px-3">
+                    <input class="form-check-input" type="radio" name="src" id="input2" value="2">
+                    <label class="form-check-label" for="input2">
+                        champion.gg
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-lg btn-success mt-4 px-4">
+                    Play!
+                </button>
+            </form>
+        </div>
+    </div>
+</main>
 
-<body>
-    <a href="/game?src=1">
-        <button type="button" name="button">metasrc.com</button>
-    </a>
-    <a href="/game?src=2">
-        <button type="button" name="button">champion.gg</button>
-    </a>
-</body>
-</html>
+<footer class="page-footer font-small fixed-bottom bg-dark text-light">
+    <div class="footer-copyright text-center py-2">
+        © 2020 Copyright: Miłosz Kaszuba
+    </div>
+</footer>
+{% endblock content %}
