--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -29,7 +29,7 @@
         }
         /*
         body {
-            background: url('./static/background/pexels-instawalli-176851.jpg'); /* Photo by InstaWalli from Pexels 
+            background: url('./static/');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
