Background added, preview images upload, minor changes
Readme updated (todo: add source of uploaded preview images)

--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="row" id="game">
-        <div class="card col-6" id="champ1">
+        <div class="col-6" id="champ1">
             <div class="row justify-content-center text-center my-4">
                 <img id="champ1_img" src="{% static 'img/'%}{{champion.0.name}}.jpg" class="champ_img img-fluid w-50 mb-4">
                 <h3 id="champ1_name" class="col-12">{{champion.0.name}}</h3>
@@ -48,7 +48,7 @@
             </div>
         </div>
 
-        <div class="card col-6" id="champ2">
+        <div class="col-6" id="champ2">
             <div class="row justify-content-center text-center my-4">
                 <img id="champ2_img" src="{% static 'img/'%}{{champion.1.name}}.jpg" class="champ_img img-fluid w-50 mb-4">
                 <h3 id="champ2_name" class="col-12">{{champion.1.name}}</h3>
