--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -18,6 +18,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
     <style>
+        body{
+            color: white;
+        }
         a{ 
             text-decoration: none !important
         }
@@ -27,14 +30,12 @@
         #champ2_role{
             text-transform:capitalize;
         }
-        /*
         body {
-            background: url('./static/');
+            background: url("{% static 'background.png' %}");
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
         }
-        */
     </style>
 
 </head>
