--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -22,7 +22,7 @@
                 </label>
             </div>
             <div class="form-check px-3">
-                <input class="form-check-input" type="radio" name="src" id="input2" value="2">
+                <input class="form-check-input" type="radio" name="src" id="input2" value="2" disabled>
                 <label class="form-check-label" for="input2">
                     champion.gg
                 </label>
@@ -36,7 +36,7 @@
 
 <footer class="page-footer font-small fixed-bottom bg-dark text-light">
     <div class="footer-copyright text-center py-2">
-        © 2020 Copyright: Miłosz Kaszuba
+        © 2021 Copyright: Miłosz Kaszuba
     </div>
 </footer>
 {% endblock content %}
