Caching, updating, UI improved

--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -22,7 +22,7 @@
     </div>
 </nav>
 
-<main class="container">
+<main class="container mb-5">
     <div id="div_score">
         <div class="d-flex justify-content-center my-2">
             <h2 class="d-inline ms-2">
