--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -42,5 +42,10 @@
 <body>
     {% block content %}
     {% endblock content %}
+    <footer class="page-footer font-small fixed-bottom bg-dark text-light">
+        <div class="footer-copyright text-center py-2">
+            © 2021 Copyright: Miłosz Kaszuba
+        </div>
+    </footer>
 </body>
 </html>
